Заменить хранение с in-memory на внешнюю БД